[tool.poetry]
name = "scilib"
version = "0.0.14"
description = "scilib"
license = "MIT"
readme = "README.md"
authors = ["phyng <phyngk@gmail.com>"]
homepage = "https://github.com/phyng/scilib"
repository = "https://github.com/phyng/scilib"
classifiers = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.scripts]
scilib-wos-import = "scilib.scripts.wos_import:run"
scilib-cnki-import = "scilib.scripts.cnki_import:run"
scilib-db-trans = "scilib.scripts.db_trans:run"
scilib-gender-benchmark = "scilib.gender.benchmark.benchmark:run"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
jupyter = "^1.0.0"
numpy = "^1.24.1"
xlrd = "^2.0.1"
matplotlib = "^3.6.2"
scipy = "^1.9.3"
requests = {extras = ["socks"], version = "^2.28.1"}
openpyxl = "^3.0.10"
orjson = "^3.8.3"
nltk = "^3.8"
pypinyin = "^0.47.1"
tabulate = "^0.9.0"
naiveBayesClassifier = "^0.1.3"
pyquery = "^2.0.0"
libs = "^0.0.10"
jupyterlab = "^3.5.2"
nameparser = "^1.1.2"
Unidecode = "^1.3.6"
aiohttp = "^3.8.3"
redis = "^3.5.3"
psycopg2 = "^2.9.5"
SQLAlchemy = "^1.4.45"

gender-guesser = { version = "0.4.0", optional = true }
genderizer = { version = "^0.1.2", optional = true }
agefromname = { version = "^0.0.8", optional = true }
pandas_access = "^0.0.1"

[tool.poetry.dev-dependencies]
sphinx = "^2.4.4"
twine = "^3.1.1"
coverage = "^5.0.3"
flake8 = "^3.7.9"
sphinx_rtd_theme = "^0.4.3"
wheel = "^0.34.2"

[tool.poetry.extras]
gender = ["agefromname", "gender-guesser", "genderizer"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
