[tool.poetry]
name = "scilib"
version = "0.0.14"
description = "scilib"
license = "MIT"
readme = "README.md"
authors = ["phyng <phyngk@gmail.com>"]
homepage = "https://github.com/phyng/scilib"
repository = "https://github.com/phyng/scilib"
classifiers = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.scripts]
scilib-wos-import = "scilib.scripts.wos_import:run"
scilib-cnki-import = "scilib.scripts.cnki_import:run"
scilib-db-trans = "scilib.scripts.db_trans:run"
scilib-gender-benchmark = "scilib.gender.benchmark.benchmark:run"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^1.5.3"
jupyter = "^1.0.0"
numpy = "^1.24.2"
xlrd = "^2.0.1"
matplotlib = "^3.7.0"
scipy = "^1.10.0"
requests = {extras = ["socks"], version = "^2.28.2"}
openpyxl = "^3.1.1"
orjson = "^3.8.6"
nltk = "^3.8"
pypinyin = "^0.48"
tabulate = "^0.9.0"
naiveBayesClassifier = "^0.1.3"
pyquery = "^2.0.0"
libs = "^0.0.10"
jupyterlab = "^3.6.1"
nameparser = "^1.1.2"
Unidecode = "^1.3.6"
aiohttp = "^3.8.4"
redis = ">=3.5.3,<5.0.0"
psycopg2 = "^2.9.5"
SQLAlchemy = "^1.4.45"

gender-guesser = { version = "0.4.0", optional = true }
genderizer = { version = "^0.1.2", optional = true }
agefromname = { version = "^0.0.8", optional = true }
pandas_access = "^0.0.1"

[tool.poetry.dev-dependencies]
sphinx = "^5.3.0"
sphinx_rtd_theme = "^1.1.1"
twine = "^4.0.2"
coverage = "^7.0.1"
flake8 = "^6.0.0"
wheel = "^0.38.4"

[tool.poetry.extras]
gender = ["agefromname", "gender-guesser", "genderizer"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
