[tool.poetry]
name = "scilib"
version = "0.0.14"
description = "scilib"
license = "MIT"
readme = "README.md"
authors = ["phyng <phyngk@gmail.com>"]
homepage = "https://github.com/phyng/scilib"
repository = "https://github.com/phyng/scilib"
classifiers = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.scripts]
scilib-wos-import = "scilib.scripts.wos_import:run"
scilib-cnki-import = "scilib.scripts.cnki_import:run"
scilib-db-trans = "scilib.scripts.db_trans:run"
scilib-gender-benchmark = "scilib.gender.benchmark.benchmark:run"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^1.5.3"
numpy = "^1.24.3"
xlrd = "^2.0.1"
matplotlib = "^3.7.1"
scipy = "^1.10.1"
requests = {extras = ["socks"], version = "^2.28.2"}
openpyxl = "^3.1.2"
orjson = "^3.8.10"
nltk = "^3.8.1"
pypinyin = "^0.48"
tabulate = "^0.9.0"
pyquery = "^2.0.0"
libs = "^0.0.10"
nameparser = "^1.1.2"
Unidecode = "^1.3.6"
aiohttp = "^3.8.4"

# db
redis = { version = "^4.5.4", optional = true }
psycopg2 = { version = "^2.9.5", optional = true }
SQLAlchemy = { version = "^1.4.45", optional = true }
pandas_access = { version = "^0.0.1", optional = true }

# gender
gender-guesser = { version = "^0.4.0", optional = true }
genderizer = { version = "^0.1.2", optional = true }
agefromname = { version = "^0.0.8", optional = true }
naiveBayesClassifier = { version = "^0.1.3", optional = true }

[tool.poetry.dev-dependencies]
sphinx = "^5.3.0"
sphinx_rtd_theme = "^1.1.1"
twine = "^4.0.2"
coverage = "^7.0.1"
flake8 = "^6.0.0"
wheel = "^0.38.4"

[tool.poetry.extras]
db = ["redis", "psycopg2", "SQLAlchemy", "pandas_access"]
gender = ["agefromname", "gender-guesser", "genderizer", "naiveBayesClassifier"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
